@@ -2001,3 +2001,4 @@
 ( cvs diff -u -r 1.17.2.34 -r 1.17.2.35 src/send_message.c;  ) > 2.5.5cvs13.patchset
 ( cvs diff -u -r 1.382.2.316 -r 1.382.2.317 src/compose.c;  ) > 2.5.5cvs14.patchset
 ( cvs diff -u -r 1.382.2.317 -r 1.382.2.318 src/compose.c;  cvs diff -u -r 1.50.2.27 -r 1.50.2.28 src/compose.h;  ) > 2.5.5cvs15.patchset
+( cvs diff -u -r 1.204.2.105 -r 1.204.2.106 src/prefs_common.c;  cvs diff -u -r 1.103.2.63 -r 1.103.2.64 src/prefs_common.h;  cvs diff -u -r 1.395.2.263 -r 1.395.2.264 src/summaryview.c;  cvs diff -u -r 1.1.2.47 -r 1.1.2.48 src/gtk/quicksearch.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/gtk/quicksearch.h;  ) > 2.5.5cvs16.patchset
