@@ -352,6 +352,7 @@ struct _PrefsCommon
 	gint summary_quicksearch_type;
 	gint summary_quicksearch_sticky;
 	gint summary_quicksearch_recurse;
+	gint summary_quicksearch_dynamic;
 	gulong color_new;
 	
 	GList *summary_quicksearch_history;
